使用 Colab 创建而成

--- a/intro_to_colab.ipynb
+++ b/intro_to_colab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO/kYvCrKWFzDv5sMGcKjAO",
+      "authorship_tag": "ABX9TyO4vF2923fdZIcOVhmmM39K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1540,9 +1540,77 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "torch.save(model.state_dict(),'iris_model')"
+      ],
       "metadata": {
         "id": "W80kbtA0zAQa"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_model = Model()\n",
+        "new_model.load_state_dict(torch.load('iris_model'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jld2xYmA0MEB",
+        "outputId": "bd8edf3a-272f-4147-94b5-3b0af8d3faf9"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_model.eval()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "495aZexO0qEe",
+        "outputId": "55c83f46-bf29-4a14-db8c-60c92513c794"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Model(\n",
+              "  (fc1): Linear(in_features=4, out_features=8, bias=True)\n",
+              "  (fc2): Linear(in_features=8, out_features=9, bias=True)\n",
+              "  (out): Linear(in_features=9, out_features=3, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "d9E8Zf3u0uwa"
       },
       "execution_count": null,
       "outputs": []
